FDDB Training notebook completed

--- a/experiments/notebooks/Train_Model.ipynb
+++ b/experiments/notebooks/Train_Model.ipynb
@@ -39,6 +39,9 @@
     "import pdb\n",
     "import sys\n",
     "import os.path\n",
+    "import glob\n",
+    "import shutil\n",
+    "import tensorflow as tf\n",
     "\n",
     "this_dir = os.chdir(\"/root/faster_rcnn\")\n",
     "\n",
@@ -60,38 +63,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Specify configuration:"
+    "### Specify and load configuration:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "cfg_file = \"experiments/cfgs/faster_rcnn_end2end_wider.yml\"\n",
-    "gpu_id = 0\n",
-    "network_name = \"VGGnet_train\"\n",
-    "pretrained_model = \"data/pretrain_model/VGG_imagenet.npy\"\n",
-    "imdb_name = \"voc_2007_trainval\"\n",
-    "randomize = True\n",
-    "restore = False\n",
-    "\n",
-    "iters = 110000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Load configuration:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +126,7 @@
       "           'HAS_RPN': True,\n",
       "           'IMS_PER_BATCH': 1,\n",
       "           'KERNEL_SIZE': 5,\n",
-      "           'LEARNING_RATE': 0.0001,\n",
+      "           'LEARNING_RATE': 0.001,\n",
       "           'LOG_IMAGE_ITERS': 100,\n",
       "           'MAX_SIZE': 1000,\n",
       "           'MOMENTUM': 0.9,\n",
@@ -174,21 +151,72 @@
       "           'SNAPSHOT_ITERS': 10000,\n",
       "           'SNAPSHOT_PREFIX': 'VGGnet_fast_rcnn',\n",
       "           'SOLVER': 'Momentum',\n",
-      "           'STEPSIZE': 200000,\n",
+      "           'STEPSIZE': 3000000,\n",
       "           'USE_FLIPPED': True,\n",
       "           'USE_PREFETCH': False,\n",
       "           'WEIGHT_DECAY': 0.0005},\n",
-      " 'USE_GPU_NMS': True}\n",
-      "<bound method pascal_voc.default_roidb of <lib.datasets.pascal_voc.pascal_voc object at 0x7f721b38c9d0>>\n",
+      " 'USE_GPU_NMS': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cfg_file = \"experiments/cfgs/faster_rcnn_end2end_fddb.yml\"\n",
+    "network_name = \"VGGnet_train\"\n",
+    "pretrained_model = \"data/pretrain_model/VGG_imagenet.npy\"\n",
+    "imdb_name = \"voc_2007_trainval\"\n",
+    "randomize = True\n",
+    "restore = True\n",
+    "ITERS = 150000\n",
+    "\n",
+    "cfg_from_file(cfg_file)\n",
+    "\n",
+    "# User-defined additional configuration.\n",
+    "cfg.GPU_ID = 0\n",
+    "cfg.ANCHOR_SCALES = [4,8,16,32]\n",
+    "\n",
+    "print('Using config:')\n",
+    "pprint.pprint(cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Specify number of folds to train\n",
+    "N_FOLDS = 10\n",
+    "# Identify experiment number\n",
+    "N_ID = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train Model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method pascal_voc.default_roidb of <lib.datasets.pascal_voc.pascal_voc object at 0x7fb51bd09e50>>\n",
       "Loaded dataset `voc_2007_trainval` for training\n",
       "Appending horizontally-flipped training examples...\n",
       "voc_2007_trainval gt roidb loaded from /root/faster_rcnn/data/cache/voc_2007_trainval_gt_roidb.pkl\n",
       "done\n",
       "Preparing training data...\n",
       "done\n",
-      "Output will be saved to `/root/faster_rcnn/output/faster_rcnn_voc_vgg/voc_2007_trainval`\n",
-      "Logs will be saved to `/root/faster_rcnn/logs/faster_rcnn_voc_vgg/voc_2007_trainval/2017-05-19-16-34-26`\n",
-      "/gpu:0\n",
+      "Output will be saved to `/root/faster_rcnn/output/faster_rcnn_voc_vgg/voc_2007_trainval/ID_2`\n",
+      "Logs will be saved to `/root/faster_rcnn/logs/faster_rcnn_voc_vgg/voc_2007_trainval/2017-06-14-10-19-15`\n",
       "Tensor(\"data:0\", shape=(?, ?, ?, 3), dtype=float32)\n",
       "Tensor(\"conv5_3/Relu:0\", shape=(?, ?, ?, 512), dtype=float32)\n",
       "Tensor(\"rpn_conv/3x3/Relu:0\", shape=(?, ?, ?, 512), dtype=float32)\n",
@@ -238,66 +266,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading pretrained model weights from data/pretrain_model/VGG_imagenet.npy\n",
-      "assign pretrain model weights to conv5_1\n",
-      "assign pretrain model biases to conv5_1\n"
+      "Restoring from /root/faster_rcnn/output/faster_rcnn_voc_vgg/voc_2007_trainval/ID_2/VGGnet_fast_rcnn_iter_110000.ckpt... done\n",
+      "iter: 110000 / 150000, total loss: 0.4317, rpn_loss_cls: 0.0613, rpn_loss_box: 0.0568, loss_cls: 0.0644, loss_box: 0.2493, lr: 0.001000\n",
+      "speed: 1.772s / iter\n",
+      "image: 001951.jpg iter: 110010 / 150000, total loss: 0.8279, rpn_loss_cls: 0.0176, rpn_loss_box: 0.4668, loss_cls: 0.0320, loss_box: 0.3115, lr: 0.001000\n",
+      "speed: 1.252s / iter\n",
+      "image: 000526.jpg iter: 110020 / 150000, total loss: 0.3654, rpn_loss_cls: 0.0025, rpn_loss_box: 0.0781, loss_cls: 0.0247, loss_box: 0.2599, lr: 0.001000\n",
+      "speed: 1.052s / iter\n",
+      "image: 001694.jpg iter: 110030 / 150000, total loss: 0.7118, rpn_loss_cls: 0.0515, rpn_loss_box: 0.2236, loss_cls: 0.1016, loss_box: 0.3350, lr: 0.001000\n",
+      "speed: 1.310s / iter\n"
      ]
     }
    ],
    "source": [
-    "cfg_from_file(cfg_file)\n",
-    "\n",
-    "print('Using config:')\n",
-    "pprint.pprint(cfg)\n",
-    "\n",
-    "\n",
     "if randomize:\n",
-    "    # fix the random seeds (numpy and caffe) for reproducibility\n",
+    "    # Fix the random seeds (numpy and caffe) for reproducibility\n",
     "    np.random.seed(cfg.RNG_SEED)\n",
     "    \n",
-    "imdb = get_imdb(imdb_name)\n",
-    "print 'Loaded dataset `{:s}` for training'.format(imdb.name)\n",
-    "roidb = get_training_roidb(imdb)\n",
+    "for fold in range(1,N_FOLDS+1):\n",
     "\n",
-    "# Define output directory\n",
-    "output_dir = get_output_dir(imdb, None)\n",
-    "# Define log directory\n",
-    "log_dir = get_log_dir(imdb)\n",
+    "    imdb = get_imdb(imdb_name)\n",
+    "    print('Loaded dataset `{:s}` for training'.format(imdb.name))\n",
+    "    roidb = get_training_roidb(imdb)\n",
+    "    \n",
+    "    # Define output directory\n",
+    "    output_dir = get_output_dir(imdb, None)\n",
+    "    output_dir = os.path.join(output_dir,\"ID_{0:d}\".format(N_ID))\n",
+    "    print('Output will be saved to `{:s}`'.format(output_dir))\n",
+    "    \n",
+    "    # Define log directory\n",
+    "    log_dir = get_log_dir(imdb)\n",
+    "    print('Logs will be saved to `{:s}`'.format(log_dir))\n",
+    "    \n",
+    "    # Reset checkpoint file\n",
+    "    shutil.copy(os.path.join(output_dir,\"checkpoint.orig\"),os.path.join(output_dir,\"checkpoint\"))\n",
     "\n",
-    "print 'Output will be saved to `{:s}`'.format(output_dir)\n",
-    "print 'Logs will be saved to `{:s}`'.format(log_dir)\n",
+    "    # Define graph\n",
+    "    network = get_network(network_name)\n",
+    "    print('Use network `{:s}` in training'.format(network_name))\n",
     "\n",
-    "device_name = '/gpu:{:d}'.format(gpu_id)\n",
-    "print device_name\n",
-    "\n",
-    "network = get_network(network_name)\n",
-    "print 'Use network `{:s}` in training'.format(network_name)\n",
-    "\n",
-    "train_net(network, imdb, roidb,\n",
-    "          output_dir=output_dir,\n",
-    "          log_dir=log_dir,\n",
-    "          pretrained_model=pretrained_model,\n",
-    "          max_iters=iters,\n",
-    "          restore=bool(int(restore)))"
+    "    train_net(network, imdb, roidb,\n",
+    "              output_dir=output_dir,\n",
+    "              log_dir=log_dir,\n",
+    "              pretrained_model=pretrained_model,\n",
+    "              max_iters=ITERS,\n",
+    "              restore=bool(int(restore)))\n",
+    "    \n",
+    "    # Graph must be reset before we restart training for the next fold.\n",
+    "    tf.reset_default_graph()\n",
+    "    \n",
+    "    # Define permanent save directory.\n",
+    "    save_dir = os.path.join(output_dir,\"Main_{0:d}\".format(fold))\n",
+    "    if os.path.exists(save_dir):\n",
+    "        shutil.rmtree(save_dir)\n",
+    "    os.mkdir(save_dir)\n",
+    "    \n",
+    "    # Move output to save directory to prevent overwriting.\n",
+    "    for ckpt_path in glob.glob(str(os.path.join(output_dir,'*{0:d}.ckpt.*'.format(ITERS)))):\n",
+    "            ckpt_file = os.path.basename(ckpt_path)\n",
+    "            shutil.move(ckpt_path,os.path.join(save_dir,ckpt_file))\n",
+    "            print('Moved checkpoint file {0:s} to {1:s}'.format(ckpt_file,save_dir))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
