--- a/experiments/notebooks/Train_Model.ipynb
+++ b/experiments/notebooks/Train_Model.ipynb
@@ -161,12 +161,12 @@
    ],
    "source": [
     "cfg_file = \"experiments/cfgs/faster_rcnn_end2end_fddb.yml\"\n",
-    "network_name = \"VGGnet_train\"\n",
+    "network_name = \"VGGnet_FeatConcat_train\"\n",
     "pretrained_model = \"data/pretrain_model/VGG_imagenet.npy\"\n",
     "imdb_name = \"voc_2007_trainval\"\n",
     "randomize = True\n",
-    "restore = True\n",
-    "ITERS = 150000\n",
+    "restore = False\n",
+    "ITERS = 10\n",
     "\n",
     "cfg_from_file(cfg_file)\n",
     "\n",
@@ -180,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Specify number of folds to train\n",
-    "N_FOLDS = 10\n",
+    "N_FOLDS = 1\n",
     "# Identify experiment number\n",
-    "N_ID = 2"
+    "N_ID = 3"
    ]
   },
   {
@@ -201,80 +201,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bound method pascal_voc.default_roidb of <lib.datasets.pascal_voc.pascal_voc object at 0x7fb51bd09e50>>\n",
+      "<bound method pascal_voc.default_roidb of <lib.datasets.pascal_voc.pascal_voc object at 0x7fc570949110>>\n",
       "Loaded dataset `voc_2007_trainval` for training\n",
       "Appending horizontally-flipped training examples...\n",
       "voc_2007_trainval gt roidb loaded from /root/faster_rcnn/data/cache/voc_2007_trainval_gt_roidb.pkl\n",
       "done\n",
       "Preparing training data...\n",
       "done\n",
-      "Output will be saved to `/root/faster_rcnn/output/faster_rcnn_voc_vgg/voc_2007_trainval/ID_2`\n",
-      "Logs will be saved to `/root/faster_rcnn/logs/faster_rcnn_voc_vgg/voc_2007_trainval/2017-06-14-10-19-15`\n",
-      "Tensor(\"data:0\", shape=(?, ?, ?, 3), dtype=float32)\n",
-      "Tensor(\"conv5_3/Relu:0\", shape=(?, ?, ?, 512), dtype=float32)\n",
-      "Tensor(\"rpn_conv/3x3/Relu:0\", shape=(?, ?, ?, 512), dtype=float32)\n",
-      "Tensor(\"rpn_conv/3x3/Relu:0\", shape=(?, ?, ?, 512), dtype=float32)\n",
-      "Tensor(\"rpn_cls_score/BiasAdd:0\", shape=(?, ?, ?, 24), dtype=float32)\n",
-      "Tensor(\"gt_boxes:0\", shape=(?, 5), dtype=float32)\n",
-      "Tensor(\"gt_ishard:0\", shape=(?,), dtype=int32)\n",
-      "Tensor(\"dontcare_areas:0\", shape=(?, 4), dtype=float32)\n",
-      "Tensor(\"im_info:0\", shape=(?, 3), dtype=float32)\n",
-      "Tensor(\"rpn_cls_score/BiasAdd:0\", shape=(?, ?, ?, 24), dtype=float32)\n",
-      "Tensor(\"rpn_cls_prob:0\", shape=(?, ?, ?, ?), dtype=float32)\n",
-      "Tensor(\"Reshape_2:0\", shape=(?, ?, ?, 24), dtype=float32)\n",
-      "Tensor(\"rpn_bbox_pred/BiasAdd:0\", shape=(?, ?, ?, 48), dtype=float32)\n",
-      "Tensor(\"im_info:0\", shape=(?, 3), dtype=float32)\n",
-      "Tensor(\"rpn_rois:0\", shape=(?, 5), dtype=float32)\n",
-      "Tensor(\"gt_boxes:0\", shape=(?, 5), dtype=float32)\n",
-      "Tensor(\"gt_ishard:0\", shape=(?,), dtype=int32)\n",
-      "Tensor(\"dontcare_areas:0\", shape=(?, 4), dtype=float32)\n",
-      "Tensor(\"conv5_3/Relu:0\", shape=(?, ?, ?, 512), dtype=float32)\n",
-      "Tensor(\"roi-data/rois:0\", shape=(?, 5), dtype=float32)\n",
-      "[<tf.Tensor 'conv5_3/Relu:0' shape=(?, ?, ?, 512) dtype=float32>, <tf.Tensor 'roi-data/rois:0' shape=(?, 5) dtype=float32>]\n",
-      "Tensor(\"drop7/mul:0\", shape=(?, 4096), dtype=float32)\n",
-      "Use network `VGGnet_train` in training\n",
-      "Computing bounding-box regression targets...\n",
-      "bbox target means:\n",
-      "[[ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]]\n",
-      "[ 0.  0.  0.  0.]\n",
-      "bbox target stdevs:\n",
-      "[[ 0.1  0.1  0.2  0.2]\n",
-      " [ 0.1  0.1  0.2  0.2]]\n",
-      "[ 0.1  0.1  0.2  0.2]\n",
-      "Normalizing targets\n",
-      "done\n",
-      "Solving...\n"
+      "Output will be saved to `/root/faster_rcnn/output/faster_rcnn_voc_vgg/voc_2007_trainval/ID_3`\n",
+      "Logs will be saved to `/root/faster_rcnn/logs/faster_rcnn_voc_vgg/voc_2007_trainval/2017-06-15-11-49-59`\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/tensorflow/python/ops/gradients_impl.py:91: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
-      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Restoring from /root/faster_rcnn/output/faster_rcnn_voc_vgg/voc_2007_trainval/ID_2/VGGnet_fast_rcnn_iter_110000.ckpt... done\n",
-      "iter: 110000 / 150000, total loss: 0.4317, rpn_loss_cls: 0.0613, rpn_loss_box: 0.0568, loss_cls: 0.0644, loss_box: 0.2493, lr: 0.001000\n",
-      "speed: 1.772s / iter\n",
-      "image: 001951.jpg iter: 110010 / 150000, total loss: 0.8279, rpn_loss_cls: 0.0176, rpn_loss_box: 0.4668, loss_cls: 0.0320, loss_box: 0.3115, lr: 0.001000\n",
-      "speed: 1.252s / iter\n",
-      "image: 000526.jpg iter: 110020 / 150000, total loss: 0.3654, rpn_loss_cls: 0.0025, rpn_loss_box: 0.0781, loss_cls: 0.0247, loss_box: 0.2599, lr: 0.001000\n",
-      "speed: 1.052s / iter\n",
-      "image: 001694.jpg iter: 110030 / 150000, total loss: 0.7118, rpn_loss_cls: 0.0515, rpn_loss_box: 0.2236, loss_cls: 0.1016, loss_box: 0.3350, lr: 0.001000\n",
-      "speed: 1.310s / iter\n"
+     "ename": "KeyError",
+     "evalue": "'Unknown dataset: VGGnet_FeatConcat_train'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-9e3b60e4e74d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;31m# Define graph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mnetwork\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_network\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnetwork_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Use network `{:s}` in training'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnetwork_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/root/faster_rcnn/lib/networks/factory.pyc\u001b[0m in \u001b[0;36mget_network\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mVGGnet_testold\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m            \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Unknown dataset: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'_'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Resnet50'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'_'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'test'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Unknown dataset: VGGnet_FeatConcat_train'"
      ]
     }
    ],
@@ -298,9 +252,11 @@
     "    log_dir = get_log_dir(imdb)\n",
     "    print('Logs will be saved to `{:s}`'.format(log_dir))\n",
     "    \n",
+    "    \"\"\"\n",
     "    # Reset checkpoint file\n",
     "    shutil.copy(os.path.join(output_dir,\"checkpoint.orig\"),os.path.join(output_dir,\"checkpoint\"))\n",
-    "\n",
+    "    \"\"\"\n",
+    "    \n",
     "    # Define graph\n",
     "    network = get_network(network_name)\n",
     "    print('Use network `{:s}` in training'.format(network_name))\n",
@@ -322,10 +278,12 @@
     "    os.mkdir(save_dir)\n",
     "    \n",
     "    # Move output to save directory to prevent overwriting.\n",
+    "    \"\"\"\n",
     "    for ckpt_path in glob.glob(str(os.path.join(output_dir,'*{0:d}.ckpt.*'.format(ITERS)))):\n",
     "            ckpt_file = os.path.basename(ckpt_path)\n",
     "            shutil.move(ckpt_path,os.path.join(save_dir,ckpt_file))\n",
-    "            print('Moved checkpoint file {0:s} to {1:s}'.format(ckpt_file,save_dir))"
+    "            print('Moved checkpoint file {0:s} to {1:s}'.format(ckpt_file,save_dir))\n",
+    "    \"\"\""
    ]
   }
  ],
