further face blur work

--- a/experiments/notebooks/Train_Model.ipynb
+++ b/experiments/notebooks/Train_Model.ipynb
@@ -96,6 +96,8 @@
       " 'ROOT_DIR': '/root/faster_rcnn',\n",
       " 'SUBCLS_NAME': 'voxel_exemplars',\n",
       " 'TEST': {'BBOX_REG': True,\n",
+      "          'HARDNEG_CONF': 0.8,\n",
+      "          'HARDNEG_OVERLAP': 0.5,\n",
       "          'HAS_RPN': True,\n",
       "          'MAX_SIZE': 1000,\n",
       "          'NMS': 0.3,\n",
@@ -161,12 +163,12 @@
    ],
    "source": [
     "cfg_file = \"experiments/cfgs/faster_rcnn_end2end_fddb.yml\"\n",
-    "network_name = \"VGGnet_FeatConcat_train\"\n",
+    "network_name = \"VGGnet_featconcat_train\"\n",
     "pretrained_model = \"data/pretrain_model/VGG_imagenet.npy\"\n",
     "imdb_name = \"voc_2007_trainval\"\n",
     "randomize = True\n",
-    "restore = False\n",
-    "ITERS = 10\n",
+    "restore = True\n",
+    "ITERS = 110000\n",
     "\n",
     "cfg_from_file(cfg_file)\n",
     "\n",
@@ -187,9 +189,9 @@
    "outputs": [],
    "source": [
     "# Specify number of folds to train\n",
-    "N_FOLDS = 1\n",
+    "N_FOLDS = 10\n",
     "# Identify experiment number\n",
-    "N_ID = 3"
+    "N_ID = 4"
    ]
   },
   {
@@ -202,33 +204,258 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bound method pascal_voc.default_roidb of <lib.datasets.pascal_voc.pascal_voc object at 0x7fc570949110>>\n",
+      "<bound method pascal_voc.default_roidb of <lib.datasets.pascal_voc.pascal_voc object at 0x7fe14c4a28d0>>\n",
       "Loaded dataset `voc_2007_trainval` for training\n",
       "Appending horizontally-flipped training examples...\n",
       "voc_2007_trainval gt roidb loaded from /root/faster_rcnn/data/cache/voc_2007_trainval_gt_roidb.pkl\n",
       "done\n",
       "Preparing training data...\n",
       "done\n",
-      "Output will be saved to `/root/faster_rcnn/output/faster_rcnn_voc_vgg/voc_2007_trainval/ID_3`\n",
-      "Logs will be saved to `/root/faster_rcnn/logs/faster_rcnn_voc_vgg/voc_2007_trainval/2017-06-15-11-49-59`\n"
+      "Output will be saved to `/root/faster_rcnn/output/faster_rcnn_voc_vgg/voc_2007_trainval/ID_4`\n",
+      "Logs will be saved to `/root/faster_rcnn/logs/faster_rcnn_voc_vgg/voc_2007_trainval/2017-06-20-13-43-52`\n",
+      "Tensor(\"data:0\", shape=(?, ?, ?, 3), dtype=float32)\n",
+      "Tensor(\"conv5_3/Relu:0\", shape=(?, ?, ?, 512), dtype=float32)\n",
+      "Tensor(\"rpn_conv/3x3/Relu:0\", shape=(?, ?, ?, 512), dtype=float32)\n",
+      "Tensor(\"rpn_conv/3x3/Relu:0\", shape=(?, ?, ?, 512), dtype=float32)\n",
+      "Tensor(\"rpn_cls_score/BiasAdd:0\", shape=(?, ?, ?, 24), dtype=float32)\n",
+      "Tensor(\"gt_boxes:0\", shape=(?, 5), dtype=float32)\n",
+      "Tensor(\"gt_ishard:0\", shape=(?,), dtype=int32)\n",
+      "Tensor(\"dontcare_areas:0\", shape=(?, 4), dtype=float32)\n",
+      "Tensor(\"im_info:0\", shape=(?, 3), dtype=float32)\n",
+      "Tensor(\"rpn_cls_score/BiasAdd:0\", shape=(?, ?, ?, 24), dtype=float32)\n",
+      "Tensor(\"rpn_cls_prob:0\", shape=(?, ?, ?, ?), dtype=float32)\n",
+      "Tensor(\"Reshape_2:0\", shape=(?, ?, ?, 24), dtype=float32)\n",
+      "Tensor(\"rpn_bbox_pred/BiasAdd:0\", shape=(?, ?, ?, 48), dtype=float32)\n",
+      "Tensor(\"im_info:0\", shape=(?, 3), dtype=float32)\n",
+      "Tensor(\"rpn_rois:0\", shape=(?, 5), dtype=float32)\n",
+      "Tensor(\"gt_boxes:0\", shape=(?, 5), dtype=float32)\n",
+      "Tensor(\"gt_ishard:0\", shape=(?,), dtype=int32)\n",
+      "Tensor(\"dontcare_areas:0\", shape=(?, 4), dtype=float32)\n",
+      "Tensor(\"conv3_3/Relu:0\", shape=(?, ?, ?, 256), dtype=float32)\n",
+      "Tensor(\"roi-data/rois:0\", shape=(?, 5), dtype=float32)\n",
+      "[<tf.Tensor 'conv3_3/Relu:0' shape=(?, ?, ?, 256) dtype=float32>, <tf.Tensor 'roi-data/rois:0' shape=(?, 5) dtype=float32>]\n",
+      "Tensor(\"conv4_3/Relu:0\", shape=(?, ?, ?, 512), dtype=float32)\n",
+      "Tensor(\"roi-data/rois:0\", shape=(?, 5), dtype=float32)\n",
+      "[<tf.Tensor 'conv4_3/Relu:0' shape=(?, ?, ?, 512) dtype=float32>, <tf.Tensor 'roi-data/rois:0' shape=(?, 5) dtype=float32>]\n",
+      "Tensor(\"conv5_3/Relu:0\", shape=(?, ?, ?, 512), dtype=float32)\n",
+      "Tensor(\"roi-data/rois:0\", shape=(?, 5), dtype=float32)\n",
+      "[<tf.Tensor 'conv5_3/Relu:0' shape=(?, ?, ?, 512) dtype=float32>, <tf.Tensor 'roi-data/rois:0' shape=(?, 5) dtype=float32>]\n",
+      "Tensor(\"pool5_1:0\", shape=(?, 7, 7, 256), dtype=float32)\n",
+      "Tensor(\"pool5_2:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "Tensor(\"pool5_3:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "Tensor(\"feat_concat/concat:0\", shape=(?, 7, 7, 1280), dtype=float32)\n",
+      "Tensor(\"drop7/mul:0\", shape=(?, 4096), dtype=float32)\n",
+      "Use network `VGGnet_featconcat_train` in training\n",
+      "['__class__', '__delattr__', '__dict__', '__doc__', '__format__', '__getattribute__', '__hash__', '__init__', '__module__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'add', 'anchor_target_layer', 'avg_pool', 'batch_normalization', 'bn_scale_combo', 'build_loss', 'concat', 'conv', 'data', 'dontcare_areas', 'dropout', 'fc', 'feat_concat', 'feed', 'get_output', 'get_unique_name', 'gt_boxes', 'gt_ishard', 'im_info', 'inputs', 'keep_prob', 'l2_regularizer', 'layers', 'load', 'lrn', 'make_var', 'max_pool', 'negation', 'proposal_layer', 'proposal_target_layer', 'psroi_pool', 'pva_inception_res_block', 'pva_inception_res_stack', 'pva_negation_block', 'pva_negation_block_v2', 'relu', 'reshape_layer', 'roi_pool', 'scale', 'setup', 'smooth_l1_dist', 'softmax', 'spatial_reshape_layer', 'spatial_softmax', 'trainable', 'upconv', 'validate_padding']\n",
+      "Computing bounding-box regression targets...\n",
+      "bbox target means:\n",
+      "[[ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]]\n",
+      "[ 0.  0.  0.  0.]\n",
+      "bbox target stdevs:\n",
+      "[[ 0.1  0.1  0.2  0.2]\n",
+      " [ 0.1  0.1  0.2  0.2]]\n",
+      "[ 0.1  0.1  0.2  0.2]\n",
+      "Normalizing targets\n",
+      "done\n"
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "'Unknown dataset: VGGnet_FeatConcat_train'",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/tensorflow/python/ops/gradients_impl.py:93: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solving...\n",
+      "Restoring from /root/faster_rcnn/output/faster_rcnn_voc_vgg/voc_2007_trainval/ID_4/VGGnet_fast_rcnn_iter_110000.ckpt...\n",
+      "INFO:tensorflow:Restoring parameters from /root/faster_rcnn/output/faster_rcnn_voc_vgg/voc_2007_trainval/ID_4/VGGnet_fast_rcnn_iter_110000.ckpt\n",
+      "conv1_1/weights:0\n",
+      "conv1_1/biases:0\n",
+      "conv1_2/weights:0\n",
+      "conv1_2/biases:0\n",
+      "conv2_1/weights:0\n",
+      "conv2_1/biases:0\n",
+      "conv2_2/weights:0\n",
+      "conv2_2/biases:0\n",
+      "conv3_1/weights:0\n",
+      "conv3_1/biases:0\n",
+      "conv3_2/weights:0\n",
+      "conv3_2/biases:0\n",
+      "conv3_3/weights:0\n",
+      "conv3_3/biases:0\n",
+      "conv4_1/weights:0\n",
+      "conv4_1/biases:0\n",
+      "conv4_2/weights:0\n",
+      "conv4_2/biases:0\n",
+      "conv4_3/weights:0\n",
+      "conv4_3/biases:0\n",
+      "conv5_1/weights:0\n",
+      "conv5_1/biases:0\n",
+      "conv5_2/weights:0\n",
+      "conv5_2/biases:0\n",
+      "conv5_3/weights:0\n",
+      "conv5_3/biases:0\n",
+      "rpn_conv/3x3/weights:0\n",
+      "rpn_conv/3x3/biases:0\n",
+      "rpn_bbox_pred/weights:0\n",
+      "rpn_bbox_pred/biases:0\n",
+      "rpn_cls_score/weights:0\n",
+      "rpn_cls_score/biases:0\n",
+      "conv6_1/weights:0\n",
+      "conv6_1/biases:0\n",
+      "fc6/weights:0\n",
+      "fc6/biases:0\n",
+      "fc7/weights:0\n",
+      "fc7/biases:0\n",
+      "cls_score/weights:0\n",
+      "cls_score/biases:0\n",
+      "bbox_pred/weights:0\n",
+      "bbox_pred/biases:0\n",
+      "Variable:0\n",
+      "Variable_1:0\n",
+      "conv3_1/weights/Momentum:0\n",
+      "conv3_1/biases/Momentum:0\n",
+      "conv3_2/weights/Momentum:0\n",
+      "conv3_2/biases/Momentum:0\n",
+      "conv3_3/weights/Momentum:0\n",
+      "conv3_3/biases/Momentum:0\n",
+      "conv4_1/weights/Momentum:0\n",
+      "conv4_1/biases/Momentum:0\n",
+      "conv4_2/weights/Momentum:0\n",
+      "conv4_2/biases/Momentum:0\n",
+      "conv4_3/weights/Momentum:0\n",
+      "conv4_3/biases/Momentum:0\n",
+      "conv5_1/weights/Momentum:0\n",
+      "conv5_1/biases/Momentum:0\n",
+      "conv5_2/weights/Momentum:0\n",
+      "conv5_2/biases/Momentum:0\n",
+      "conv5_3/weights/Momentum:0\n",
+      "conv5_3/biases/Momentum:0\n",
+      "rpn_conv/3x3/weights/Momentum:0\n",
+      "rpn_conv/3x3/biases/Momentum:0\n",
+      "rpn_bbox_pred/weights/Momentum:0\n",
+      "rpn_bbox_pred/biases/Momentum:0\n",
+      "rpn_cls_score/weights/Momentum:0\n",
+      "rpn_cls_score/biases/Momentum:0\n",
+      "conv6_1/weights/Momentum:0\n",
+      "conv6_1/biases/Momentum:0\n",
+      "fc6/weights/Momentum:0\n",
+      "fc6/biases/Momentum:0\n",
+      "fc7/weights/Momentum:0\n",
+      "fc7/biases/Momentum:0\n",
+      "cls_score/weights/Momentum:0\n",
+      "cls_score/biases/Momentum:0\n",
+      "bbox_pred/weights/Momentum:0\n",
+      "bbox_pred/biases/Momentum:0\n",
+      "conv4_3/weights\n",
+      "-2030.53\n",
+      "conv5_1/weights\n",
+      "-1492.91\n",
+      "conv1_1/biases\n",
+      "32.089\n",
+      "conv3_2/biases\n",
+      "9.16394\n",
+      "conv2_1/biases\n",
+      "14.1903\n",
+      "conv1_2/biases\n",
+      "3.74758\n",
+      "conv4_1/weights\n",
+      "-694.275\n",
+      "rpn_bbox_pred/weights\n",
+      "-5.86757\n",
+      "rpn_cls_score/biases\n",
+      "1.01514e-07\n",
+      "rpn_conv/3x3/biases\n",
+      "1.0305\n",
+      "conv4_2/biases\n",
+      "15.2893\n",
+      "conv1_1/weights\n",
+      "-4.21271\n",
+      "fc7/weights\n",
+      "-6545.54\n",
+      "conv3_1/biases\n",
+      "4.38851\n",
+      "rpn_conv/3x3/weights\n",
+      "39.8201\n",
+      "conv2_2/biases\n",
+      "2.01767\n",
+      "conv2_1/weights\n",
+      "14.6418\n",
+      "cls_score/weights\n",
+      "0.100194\n",
+      "fc6/biases\n",
+      "323.753\n",
+      "rpn_bbox_pred/biases\n",
+      "-1.04138\n",
+      "conv5_2/weights\n",
+      "-1833.13\n",
+      "fc7/biases\n",
+      "2066.03\n",
+      "bbox_pred/biases\n",
+      "0.00168386\n",
+      "conv5_3/weights\n",
+      "-2476.27\n",
+      "conv3_3/biases\n",
+      "6.69939\n",
+      "rpn_cls_score/weights\n",
+      "0.298931\n",
+      "bbox_pred/weights\n",
+      "0.00391749\n",
+      "conv4_2/weights\n",
+      "-1335.06\n",
+      "conv5_2/biases\n",
+      "25.5619\n",
+      "conv5_3/biases\n",
+      "76.8177\n",
+      "fc6/weights\n",
+      "-14537.3\n",
+      "conv5_1/biases\n",
+      "23.4218\n",
+      "conv4_3/biases\n",
+      "16.3481\n",
+      "conv4_1/biases\n",
+      "10.4648\n",
+      "cls_score/biases\n",
+      "7.45058e-08\n",
+      "conv3_3/weights\n",
+      "-460.025\n",
+      "conv3_1/weights\n",
+      "-134.938\n",
+      "conv1_2/weights\n",
+      "181.085\n",
+      "conv3_2/weights\n",
+      "-279.412\n",
+      "conv2_2/weights\n",
+      "-41.4014\n",
+      "INFO:tensorflow:Restoring parameters from /root/faster_rcnn/output/faster_rcnn_voc_vgg/voc_2007_trainval/ID_4/VGGnet_fast_rcnn_iter_110000.ckpt\n",
+      "done\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'iter' referenced before assignment",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-9e3b60e4e74d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;31m# Define graph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mnetwork\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_network\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnetwork_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Use network `{:s}` in training'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnetwork_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/root/faster_rcnn/lib/networks/factory.pyc\u001b[0m in \u001b[0;36mget_network\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mVGGnet_testold\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m            \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Unknown dataset: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'_'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Resnet50'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'_'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'test'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Unknown dataset: VGGnet_FeatConcat_train'"
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-65c7d5da02c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m               \u001b[0mpretrained_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpretrained_model\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m               \u001b[0mmax_iters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mITERS\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m               restore=bool(int(restore)))\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0;31m# Graph must be reset before we restart training for the next fold.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/root/faster_rcnn/lib/fast_rcnn/train.py\u001b[0m in \u001b[0;36mtrain_net\u001b[0;34m(network, imdb, roidb, output_dir, log_dir, pretrained_model, max_iters, restore)\u001b[0m\n\u001b[1;32m    421\u001b[0m         \u001b[0msw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSolverWrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimdb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mroidb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogdir\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mlog_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpretrained_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpretrained_model\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    422\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0;34m'Solving...'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 423\u001b[0;31m         \u001b[0msw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_iters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrestore\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrestore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    424\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0;34m'done solving'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/root/faster_rcnn/lib/fast_rcnn/train.py\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(self, sess, max_iters, restore)\u001b[0m\n\u001b[1;32m    314\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msnapshot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    315\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 316\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mlast_snapshot_iter\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    317\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msnapshot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    318\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'iter' referenced before assignment"
      ]
     }
    ],
@@ -252,15 +479,13 @@
     "    log_dir = get_log_dir(imdb)\n",
     "    print('Logs will be saved to `{:s}`'.format(log_dir))\n",
     "    \n",
-    "    \"\"\"\n",
     "    # Reset checkpoint file\n",
     "    shutil.copy(os.path.join(output_dir,\"checkpoint.orig\"),os.path.join(output_dir,\"checkpoint\"))\n",
-    "    \"\"\"\n",
     "    \n",
     "    # Define graph\n",
     "    network = get_network(network_name)\n",
     "    print('Use network `{:s}` in training'.format(network_name))\n",
-    "\n",
+    "    print(dir(network))\n",
     "    train_net(network, imdb, roidb,\n",
     "              output_dir=output_dir,\n",
     "              log_dir=log_dir,\n",
@@ -278,13 +503,20 @@
     "    os.mkdir(save_dir)\n",
     "    \n",
     "    # Move output to save directory to prevent overwriting.\n",
-    "    \"\"\"\n",
     "    for ckpt_path in glob.glob(str(os.path.join(output_dir,'*{0:d}.ckpt.*'.format(ITERS)))):\n",
     "            ckpt_file = os.path.basename(ckpt_path)\n",
     "            shutil.move(ckpt_path,os.path.join(save_dir,ckpt_file))\n",
-    "            print('Moved checkpoint file {0:s} to {1:s}'.format(ckpt_file,save_dir))\n",
-    "    \"\"\""
+    "            print('Moved checkpoint file {0:s} to {1:s}'.format(ckpt_file,save_dir))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
